// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes style on hover 1`] = `
<button
  className="customizable-button"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "background": "#000000",
      "borderColor": "#000000",
      "color": "#000000",
    }
  }
  type="button"
>
  Example
</button>
`;

exports[`renders without crashing 1`] = `
<button
  className="customizable-button"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "background": undefined,
      "borderColor": undefined,
      "color": undefined,
    }
  }
  type="button"
>
  Example
</button>
`;
